# uplyfe

./: .env  .env.bak  .env.example  .gitignore  README.md  package-lock.json
ai-service/exercise-routine-generator/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
ai-service/exercise-routine-generator/exercise_routine_generator/: chroma_store.py  config.py  equipment.py  llm.py  main.py  models.py  service.py
ai-service/exercise-routine-generator/exercise_routine_generator/api/: routes.py
ai-service/exercise-routine-generator/exercise_routine_generator/cli/: ingest.py
ai-service/exercise-routine-generator/testgenerate/: user_profile.json  user_profile_ngawur.json  user_profile_ngawur1.json  user_profile_waras.json  weekly_routine_ngawur1.json  weekly_routine_waras.json
ai-service/gateway/: .env.bak  .env.example  .gitignore  Makefile  README.md  auth.py  config.py  llm.py  main.py  pyproject.toml
ai-service/gateway/docs/: HEALTH_CHECKUP_API.md
ai-service/gateway/modules/chat/: api.py  schemas.py  service.py
ai-service/gateway/modules/exercise/: api.py  schemas.py  service.py
ai-service/gateway/modules/health_checkup_helpers/: api.py
ai-service/gateway/modules/recipe/: api.py  schemas.py  service.py
ai-service/health-checkup-extraction/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
ai-service/health-checkup-extraction/app/: __init__.py  config.py  main.py
ai-service/health-checkup-extraction/app/api/: routes.py
ai-service/health-checkup-extraction/app/cli/: demo.py  eval.py  ingest.py
ai-service/health-checkup-extraction/app/llm/: __init__.py  client.py  prompts.py
ai-service/health-checkup-extraction/app/models/: __init__.py  biomarkers.py  findings.py  lab.py  report.py
ai-service/health-checkup-extraction/app/normalize/: __init__.py  units.py  validator.py
ai-service/health-checkup-extraction/app/parsers/: __init__.py  header.py  language.py  llm_extractor.py  ocr_parser.py  page_chunker.py  pdf_parser.py  regex_extractor.py
ai-service/health-checkup-extraction/app/pipeline/: __init__.py  orchestrator.py
ai-service/health-checkup-extraction/app/rag/: __init__.py  retrieve.py  store.py
ai-service/health-checkup-extraction/app/rules/: __init__.py  _helpers.py  anthropometric.py  cbc.py  electrolytes.py  engine.py  glucose.py  inflammation.py  kidney.py  lipids.py  liver.py  patterns.py  thyroid.py  vitamins.py
ai-service/health-checkup-extraction/app/safety/: __init__.py  fidelity.py  validator.py
ai-service/health-checkup-extraction/data/: sources.example.json  sources.json
ai-service/health-checkup-extraction/data/samples/: manual_input.json
ai-service/health-checkup-extraction/docs/: ARCHITECTURE.md  COVERAGE.md  KNOWLEDGE_SOURCING.md  SAFETY.md
ai-service/health-checkup-extraction/knowledge/aasld/: alt-elevation-2017.md
ai-service/health-checkup-extraction/knowledge/ada/: glucose-screening-2024.md
ai-service/health-checkup-extraction/knowledge/aha-acc/: cholesterol-2018.md  hypertension-2017.md
ai-service/health-checkup-extraction/knowledge/aha-diet/: healthy-eating-pattern.md
ai-service/health-checkup-extraction/knowledge/ata/: thyroid-disease.md
ai-service/health-checkup-extraction/samples/: README.md
ai-service/health-checkup-extraction/tests/: test_bulletize.py  test_column_layout_flags.py  test_fidelity.py  test_header.py  test_key_insights.py  test_language.py  test_normalize.py  test_number_parser.py  test_orchestrator_indonesian.py  test_page_chunker.py  test_pipeline.py  test_printed_range_override.py  test_range_based_unit_inference.py  test_recheck_advice.py  test_reference_range_extraction.py  test_regex_extractor.py  test_regex_flags.py  test_regex_indonesian.py  test_report_format.py  test_rules.py  test_safety.py  test_unit_inference.py
ai-service/health-checkup-extraction/tools/: generate_synthetic.py
ai-service/recipe-generator/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
ai-service/recipe-generator/recipe_generator/: chroma_store.py  config.py  embeddings.py  llm.py  main.py  models.py  service.py
ai-service/recipe-generator/recipe_generator/api/: routes.py
ai-service/recipe-generator/recipes/: README.md
(+127 files in other folders)
