[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exercise-routine-generator"
version = "0.1.0"
description = "3-stage RAG pipeline that builds weekly workout plans grounded in a curated exercise dataset and exercise-science textbooks."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "tqdm>=4.66",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
erg-ingest = "exercise_routine_generator.cli.ingest:app"

[tool.setuptools.packages.find]
include = ["exercise_routine_generator*"]
