[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uplyfe-ai-gateway"
version = "0.1.0"
description = "Unified FastAPI gateway for Uplyfe AI modules (health-checkup, exercise, recipe)."
requires-python = ">=3.10"
authors = [{ name = "Leonard" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.ruff]
line-length = 110
target-version = "py310"
