[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-checkup-extraction"
version = "0.1.0"
description = "Safety-first health-check report assistant: extract → normalize → rule-flag → RAG → LLM explain → safety validate."
requires-python = ">=3.10"
authors = [{ name = "Leonard" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "pytesseract>=0.3.10",
    "Pillow>=10.2",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "httpx>=0.27",
    "tenacity>=8.2",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
    "httpx>=0.27",
]

[project.scripts]
hcx = "app.cli.demo:app"
hcx-ingest = "app.cli.ingest:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S"]
ignore = ["S101"]  # asserts in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
