[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-generator"
version = "0.1.0"
description = "RAG-based daily / weekly meal-plan generator. Searches a curated recipe collection in ChromaDB and asks the LLM to assemble a balanced day of meals."
requires-python = ">=3.10"
authors = [{ name = "Leonard" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
recipe-ingest = "recipe_generator.cli.ingest:app"

[tool.setuptools.packages.find]
include = ["recipe_generator*"]

[tool.ruff]
line-length = 110
target-version = "py310"
